    - Try to not wrap between a punctuation and a digit. (#8503)
    - Inside InputTextMultiline() with _WordWrap: prefer keeping blanks at the
      end of a line rather than at the beginning of next line. (#8990, #3237)
  - Fixed low-level word-wrapping function reading from *text_end when passed
    a string range. (#9107) [@achabense]
- Nav:
  - Fixed remote/shortcut InputText() not teleporting mouse cursor when
    nav cursor is visible and `io.ConfigNavMoveSetMousePos` is enabled.
  - Fixed a looping/wrapping issue when done in menu layer. (#9178)
  - Fixed speed scale for resizing/moving with keyboard/gamepad. We incorrectly
    used io.DisplayFramebufferScale (very old code), effectively making those
    actions faster on macOS/iOS retina screens.
    (changed this to use a style scale factor that's not fully formalized yet)
  - Fixed an UBSan warning when using in a ListClipper region . (#9160)
- Scrollbar: fixed a codepath leading to a divide-by-zero (which would not be
  noticeable by user but detected by sanitizers). (#9089) [@judicaelclair]
- InvisibleButton: allow calling with size (0,0) to fit to available content 
  size. (#9166, #7623)
- Tooltips, Disabled: fixed EndDisabledOverrideReenable() assertion when
  nesting a tooltip in a disabled block. (#9180, #7640) [@RegimantasSimkus]
- Added GetItemFlags() in public API for consistency and to expose generic
  flags of last submitted item. (#9127)
- Log/Capture: fixed erroneously injecting extra carriage returns in output
  buffer when ItemSpacing.y > FramePadding.y + 1.
- Images:
  - Added style.ImageRounding, ImGuiStyleVar_ImageRounding to configure
    rounding of Image() widgets. (#2942, #845)
  - ImageButton() doesn't use a clamped style.FrameRounding value but instead
    adjust inner image rounding when FramePadding > FrameRounding. (#2942, #845)
- Shortcuts:
  - IsItemHovered() without ImGuiHoveredFlags_AllowWhenBlockedByActiveItem