@@ -171,6 +171,9 @@ Other Changes:
       end of a line rather than at the beginning of next line. (#8990, #3237)
   - Fixed low-level word-wrapping function reading from *text_end when passed
     a string range. (#9107) [@achabense]
+  - Changed RenderTextEllipsis() logic to not trim trailing blanks before
+    the ellipsis, making ellipsis position more consistent and not arbitrary
+    hiding the possibility of multiple blanks. (#9229)
 - Nav:
   - Fixed remote/shortcut InputText() not teleporting mouse cursor when
     nav cursor is visible and `io.ConfigNavMoveSetMousePos` is enabled.
